# NoiseMachine-DelayTank

./: CMakeLists.txt
src/: CMakeLists.txt
src/app_DelayTank/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  SpotAttachment.cpp
src/app_DelayTank/include/: PluginEditor.h  PluginProcessor.h  SpotAttachment.h
src/lib_DelayTankEngine/: CMakeLists.txt  Delay.cpp  DelayTankEngine.cpp
src/lib_DelayTankEngine/include/: Delay.h  DelayTankEngine.h
src/lib_DelayTankEngine/test/: testDelay.cpp  testDelayTankEngine.cpp
src/lib_DelayTankLookAndFeel/: CMakeLists.txt  DelayTankLookAndFeel.cpp
src/lib_DelayTankLookAndFeel/include/: DelayTankLookAndFeel.h
src/lib_DelayTankView/: CMakeLists.txt  DelayTankView.cpp  DelayTankViewAttachment.cpp  InfoPanel.cpp  Spot.cpp  SpotAttachment.cpp
src/lib_DelayTankView/include/: DelayTankView.h  DelayTankViewAttachment.h  InfoPanel.h  Spot.h  SpotAttachment.h
test/app_GraphicsTests/: CMakeLists.txt  MainComponent.cpp
test/app_GraphicsTests/include/: MainComponent.h
test/app_UnitTests/: CMakeLists.txt
